// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

import "repr/src/global_id.proto";
import "storage-client/src/types/connections.proto";

package mz_storage_client.types.connections.aws;

message ProtoAwsConfig {
    ProtoAwsCredentials credentials = 1;
    optional string region = 2;
    ProtoAwsAssumeRole role = 3;
    optional string endpoint = 4;
}

message ProtoAwsCredentials {
    mz_storage_client.types.connections.ProtoStringOrSecret access_key_id = 1;
    mz_repr.global_id.ProtoGlobalId secret_access_key = 2;
    optional mz_storage_client.types.connections.ProtoStringOrSecret session_token = 3;
}

message ProtoAwsAssumeRole {
    string arn = 1;
}
